# sudoku-solver

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  sudoku.c  test.txt  test2.txt
EXAMPLES/: hard.txt  hardm.txt  sudoku.txt.bak  sudoku4.txt  sudoku5.txt  sudoku6.txt  sudoku_false.txt
test/: CMakeLists.txt  Makefile.wip  easy.txt  slow.txt  test.sh
test/qemu-raspbian/: Makefile  create-chroot.sh
test/qemu-user-raspbian/: Makefile  create-chroot.sh
